--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+/* You can ad global styles to this file, and also import other style files */
 
 html {
     background: url(Bryan.jpg)  no-repeat center center fixed; 
@@ -124,6 +124,10 @@ body {
     margin-right: 40px;  
     margin-left: 40px;  
     margin-bottom: 30px;
+ }
+
+ #body {
+     background-color: black;
  }
 
  h2.titles {
