--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,12 @@ body {
 
  #blackbody {
      background-color: black;
+     /*box*/
+    padding-top: 0px;  
+    padding-bottom: 10px;  
+    margin-right: 40px;  
+    margin-left: 40px;  
+    margin-bottom: 30px;
  }
 
  h2.titles {
