--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ html {
 
 body {
     background-color: black;
+    background: linear-gradient(to right, rgba(0,0,0,0.65) 0%,rgba(255,255,255,0) 48%,rgba(2,2,2,1) 100%);
 }
 
   nav {  
