--- a/styles.css
+++ b/styles.css
@@ -130,6 +130,7 @@ body {
 
  div.blackbody {
      background-color: black;
+     background: linear-gradient(to right, rgba(0,0,0,0.65) 0%,rgba(255,255,255,0) 48%,rgba(2,2,2,1) 100%);
  }
 
  h2.titles {
