--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,7 @@ body {
  }
 
  div.blackbody {
-     background: -webkit-linear-gradient(left, rgba(0,0,0,0.65) 0%,rgba(255,255,255,0) 48%,rgba(2,2,2,1) 100%);
+     background-color: black;
  }
 
  h2.titles {
