--- a/styles.css
+++ b/styles.css
@@ -129,8 +129,9 @@ body {
  }
 
  #blackbody {
-     background: linear-gradient(to top, rgba(0, 0, 0, 0.4) 10%, rgba(0, 0, 0, 0.8) 15%, rgba(0, 0, 0, 1) 20%);
-
+    background-color: black; 
+    /*background: linear-gradient(to top, rgba(0, 0, 0, 0.4) 10%, rgba(0, 0, 0, 0.8) 15%, rgba(0, 0, 0, 1) 20%);
+*/
      
  }
 
