--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,9 @@ body {
 
  #blackbody {
     /*background-color: black; */
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.4) 10%, rgba(0, 0, 0, 0.8) 15%, rgba(0, 0, 0, 1) 20%);
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.4) 10%,
+     rgba(0, 0, 0, 0.7) 15%, rgba(0, 0, 0, 0.8) 20%,
+     rgba(0, 0, 0, 0.7) 80%, rgba(0, 0, 0, 0.4) 90%);
      
  }
 
@@ -342,8 +344,11 @@ body {
 }
 .content {
     padding-bottom: 20px;
-    background-color: white;
+    background-color: transparent;
     border-radius: 18px;
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+    
 }
 .timeline ul li:nth-child(odd):before{
     content: '';
