cleaning up timeline pt 4

--- a/styles.css
+++ b/styles.css
@@ -314,6 +314,7 @@ body {
     width: 1000px;
     /*box*/
     padding-bottom: 1000px;
+    margin-bottom: 100px;
 }
 .timeline:before{
     content: '';
