--- a/styles.css
+++ b/styles.css
@@ -124,6 +124,7 @@ body {
     padding-top: 20px;  
     padding-bottom: 10px;  
     margin-right: 40px;  
+    margin-top: 20px;  
     margin-left: 40px;  
     margin-bottom: 30px;
  }
