--- a/styles.css
+++ b/styles.css
@@ -314,15 +314,15 @@ body {
     padding: 40px 0;
     width: 1000px;
     /*box*/
-    padding-bottom: 900px;
-    margin-bottom: 300px;
+    padding-bottom: 500px;
+    margin-bottom: 500px;
 }
 .timeline:before{
     content: '';
     position: absolute;
     left: 50%;
     width: 2px;
-    height: 100%;
+    height: 1000px;
     background: #c5c5c5;
 }
 .timeline ul{
