--- a/styles.css
+++ b/styles.css
@@ -322,7 +322,7 @@ body {
     position: absolute;
     left: 50%;
     width: 2px;
-    height: 1000px;
+    height: 100%;
     background: #c5c5c5;
 }
 .timeline ul{
