--- a/styles.css
+++ b/styles.css
@@ -323,7 +323,8 @@ body {
     left: 50%;
     width: 2px;
     height: 100%;
-    background: #c5c5c5;
+    /*background: #c5c5c5;*/
+    background:yellow;
 }
 .timeline ul{
     margin: 0;
