--- a/styles.css
+++ b/styles.css
@@ -326,7 +326,7 @@ body {
     width: 1000px;
     /*box*/
     padding-bottom: 1000px;
-    margin-bottom: 1000px;
+    margin-bottom: 500px;
 }
 .timeline:before{
     content: '';
@@ -339,7 +339,7 @@ body {
 }
 .timeline ul{
     margin: 0;
-    padding: 0;
+    padding: 100px;
 }
 .timeline ul li{
     list-style: none;
