--- a/styles.css
+++ b/styles.css
@@ -124,7 +124,7 @@ body {
     padding-top: 20px;  
     padding-bottom: 10px;  
     margin-right: 40px;  
-    margin-top: 20px;  
+    margin-top: 40px;  
     margin-left: 40px;  
     margin-bottom: 30px;
  }
@@ -179,6 +179,17 @@ body {
     float: right;
     /*box*/
     margin-top: 30px;  
+    margin-left: 30px;
+    margin-right: 40px; 
+    margin-bottom: 0px;
+  }
+  div.polaroid-cooking2 {
+    max-width: 320px;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    float: right;
+    /*box*/
+    margin-top: 20px;  
     margin-left: 30px;
     margin-right: 40px; 
     margin-bottom: 0px;
@@ -325,7 +336,7 @@ body {
     padding: 40px 0;
     width: 1000px;
     /*box*/
-    padding-bottom: 1000px;
+    padding-bottom: 700px;
     margin-bottom: 500px;
 }
 .timeline:before{
@@ -339,7 +350,7 @@ body {
 }
 .timeline ul{
     margin: 0;
-    padding: 100px;
+    padding: 300px;
 }
 .timeline ul li{
     list-style: none;
