--- a/styles.css
+++ b/styles.css
@@ -346,11 +346,11 @@ body {
     width: 2px;
     height: 100%;
     /*background: #c5c5c5;*/
-    background:yellow;
+    background:blue;
 }
 .timeline ul{
     margin: 0;
-    padding: 300px;
+    padding: 0;
 }
 .timeline ul li{
     list-style: none;
