--- a/styles.css
+++ b/styles.css
@@ -124,7 +124,7 @@ body {
     padding-top: 20px;  
     padding-bottom: 10px;  
     margin-right: 40px;  
-    margin-top: 40px;  
+    margin-top: 100px;  
     margin-left: 40px;  
     margin-bottom: 30px;
  }
@@ -137,15 +137,15 @@ body {
     margin-right: 40px;  
     margin-top: 20px;  
     margin-left: 40px;  
-    margin-bottom: 30px;
+    margin-bottom: 100px;
  }
 
  #blackbody {
     /*background-color: black; */
     background: linear-gradient(to top, rgba(0, 0, 0, 0) 1%,
      rgba(0, 0, 0, 0.7) 10%, rgba(0, 0, 0, 0.85) 20%,
-     rgba(0, 0, 0, 0.7) 88%, rgba(0, 0, 0, 0) 98%);
-     
+     rgba(0, 0, 0, 0.7) 96%, rgba(0, 0, 0, 0) 98%);
+     padding-top: 50px;
  }
 
  h2.titles {
@@ -336,8 +336,8 @@ body {
     padding: 40px 0;
     width: 1000px;
     /*box*/
-    padding-bottom: 700px;
-    margin-bottom: 500px;
+    padding-bottom: 1450px;
+    margin-bottom: 200px;
 }
 .timeline:before{
     content: '';
@@ -345,8 +345,7 @@ body {
     left: 50%;
     width: 2px;
     height: 100%;
-    /*background: #c5c5c5;*/
-    background:blue;
+    background: #c5c5c5;
 }
 .timeline ul{
     margin: 0;
@@ -416,6 +415,7 @@ body {
     padding: 0;
     font-size: 14px;
 }
+/*Time nodes*/
 .timeline ul li:nth-child(odd) .time{
     position: absolute;
     top: 12px;
@@ -437,6 +437,20 @@ body {
     color: #fff;
     border-radius: 18px;
     box-shadow: 0 0 0 3px rgba(233, 33, 99, 0.3);
+}
+.timeline ul li:nth-child(odd) .photo{
+    position: absolute;
+    top: 70px;
+    right: -250px;
+    margin: 0;
+    background-color: transparent;
+}
+.timeline ul li:nth-child(even) .photo{
+    position: absolute;
+    top: 70px;
+    left: -250px;
+    margin: 0;
+    background-color: transparent;
 }
  div.polaroid-cooking {
     max-width: 200px;
