--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,38 @@ html {
 body {
     background-color: transparent;
 }
+#resumebutton {
+    text-align:center;
+    padding-top:-60px;
+}
+.button {
+    width: 170px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    text-align: center;
+    color: #000;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin-left: 30px;
+    margin-bottom: 30px;
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+  }
+  
+  .button-1 {
+    background-color: transparent;
+    text-align: center;
+    border: 3px solid white;
+    border-radius: 50px;
+    -webkit-transition: all .15s ease-in-out;
+    transition: all .15s ease-in-out;
+    color: white;
+  }
+  .button-1:hover {
+    box-shadow: 0 0 10px 0 black inset, 0 0 20px 2px black;
+    border: 3px solid white;
+  }
 
 /*navigator*/
 
@@ -110,7 +142,7 @@ body {
     -webkit-transform:scale(1,1.1);
     /*box*/
     padding-top: 40px;  
-    padding-bottom: 150px;  
+    padding-bottom: 20px;  
     margin-right: 0px;  
     margin-top: 0px;  
     /*positioning*/
@@ -224,6 +256,10 @@ body {
   }
 
   #navigation {
+    animation-delay: 4s;
+  }
+
+  #resumebutton {
     animation-delay: 4s;
   }
   
