--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,18 @@ body {
 
 /*navigator*/
 
+#navbar {
+    background: linear-gradient(to top, rgba(0, 0, 0, 0) 50%,
+     rgba(0, 0, 0, 0.2) 55%, rgba(0, 0, 0, 0.8) 60%);
+    justify-content: flex-end;
+    position: fixed;
+    top: -500px;
+    width: 100%;
+    display: flex;
+    transition: top 0.3s;
+    z-index:1;
+  }  
+
   nav {  
     display: flex;
     justify-content: flex-end;
@@ -85,6 +97,7 @@ body {
     color: darkgray;
     text-decoration: none;
   }
+
   #logo {   
     font-family: 'Montserrat', sans-serif;  
     font-size: 30px;  
