--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 }
 #resumebutton {
     text-align:center;
-    padding-top:-60px;
+    padding-top: 0px;
 }
 .button {
     width: 170px;
@@ -109,7 +109,7 @@ body {
     margin-right: 0px;  
     margin-top: 0px;  
     }
-/*text*/
+
  #myname {
     color: white;
     font-family: 'Montserrat', sans-serif;
@@ -151,7 +151,6 @@ body {
     text-shadow: 3px 3px 6px #0e0e0e;
     border: none;
     line-height: 60px;
-    font-weight: 10;
     -webkit-transform:scale(1,1.1);
     /*box*/
     padding-top: 40px;  
@@ -183,6 +182,17 @@ body {
     margin-top: 20px;  
     margin-left: 40px;  
     margin-bottom: 100px;
+ }
+
+ #amboxpages {
+    background-color: white;
+    /*box*/
+    padding-top: 20px;  
+    padding-bottom: 10px;  
+    margin-right: 40px;  
+    margin-top: 100px;  
+    margin-left: 40px;  
+    margin-bottom: 30px;
  }
 
  #blackbody {
@@ -217,6 +227,19 @@ body {
     margin-right: 30px;  
  }
 
+ #headingpage {
+    color: black;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 15px;
+    font-weight: 100;
+    line-height: 30px;
+    /*box*/
+    padding-top: 10px;  
+    padding-bottom: 20px;  
+    margin-left: 30px;
+    margin-right: 30px;  
+ }
+
  div.AMtext3 {
     color: white;
     font-family: 'Montserrat', sans-serif;
@@ -239,7 +262,7 @@ body {
     text-decoration: none;
  }
 
-#projects a:hover { 
+ #projects a:hover { 
     background-color:transparent;
     color: lightgray;
     text-decoration: none;
