--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,23 @@ body {
     text-align:center;
     padding-top: 0px;
 }
+
+.aspectwrapper {
+    display: inline-block; /* shrink to fit */
+    width: 100%;           /* whatever width you like */
+    position: relative;    /* so .content can use position: absolute */
+  }
+  .aspectwrapper::after {
+    padding-top: 56.25%; /* percentage of containing block _width_ */
+    display: block;
+    content: '';
+  }
+  .content {
+    position: absolute;
+    top: 0; bottom: 0; right: 0; left: 0;  /* follow the parent's edges */
+    outline: thin dashed green;            /* just so you can see the box */
+  }
+
 .button {
     width: 170px;
     padding-top: 30px;
